--- a/32K_bwt_mtf_rle/makefile
+++ b/32K_bwt_mtf_rle/makefile
@@ -17,11 +17,14 @@ arithmetic_coder_ut.o: arithmetic_coder_ut.cpp arithmetic_coder_ut.h
 bwt_ari_encode.exe: bwt_mtf_rle_ari_e_main.o bwt_mtf_rle_e.o arithmetic_encode.o arithmetic_coder_ut.o
 	${CC} $+ -o $@
 
-bwt_mtf_rle_d.o: bwt_mtf_rle_d.cpp bwt_mtf_rle_d.h
+arithmetic_decode.o: arithmetic_decode.cpp arithmetic_decode.h arithmetic_coder_ut.h arithmetic_coder_cfg.h
 	${CC} -c $<
 
-bwt_mtf_rle_ari_d_main.o: bwt_mtf_rle_ari_d_main.cpp bwt_mtf_rle_d.h
+bwt_d.o: bwt_d.cpp bwt_d.h
 	${CC} -c $<
 
-bwt_ari_decode.exe: bwt_mtf_rle_ari_d_main.o bwt_mtf_rle_d.o
+bwt_mtf_rle_ari_d_main.o: bwt_mtf_rle_ari_d_main.cpp  arithmetic_decode.h bwt_d.h
+	${CC} -c $<
+
+bwt_ari_decode.exe: bwt_mtf_rle_ari_d_main.o bwt_d.o arithmetic_decode.o arithmetic_coder_ut.o
 	${CC} $+ -o $@
