--- a/32K_bwt_mtf_rle_bin/makefile
+++ b/32K_bwt_mtf_rle_bin/makefile
@@ -4,7 +4,7 @@ cc = clang  -std=c99 -O2 -Wall
 # cc = gcc  -std=c99 -O2 -Wall
 UTIL_DIR := ../32K_bwt_mtf_rle_c
 
-all: bwt_ari_encode.exe bwt_ari_decode.exe
+all: bwt_ari_encode.exe bwt_ari_decode.exe bwt_ari_encode_znz.exe bwt_ari_decode_znz.exe
 
 bwt_sort.o: $(UTIL_DIR)/bwt_sort.cpp $(UTIL_DIR)/bwt_sort.h
 	${CC} -c -I $(UTIL_DIR) $<
@@ -18,10 +18,19 @@ bwt_mtf_rle_ari_e_main.o: bwt_mtf_rle_ari_e_main.cpp $(UTIL_DIR)/bwt_sort.h bwt_
 arithmetic_encode.o: arithmetic_encode.cpp arithmetic_encode.h arithmetic_coder_cfg.h
 	${CC} -c $<
 
+arithmetic_encode_znz.o: arithmetic_encode_znz.cpp arithmetic_encode.h arithmetic_coder_cfg.h
+	${CC} -c $<
+
 bwt_ari_encode.exe: bwt_mtf_rle_ari_e_main.o bwt_sort.o bwt_mtf_rle_e.o arithmetic_encode.o
 	${CC} $+ -o $@
 
+bwt_ari_encode_znz.exe: bwt_mtf_rle_ari_e_main.o bwt_sort.o bwt_mtf_rle_e.o arithmetic_encode_znz.o
+	${CC} $+ -o $@
+
 arithmetic_decode.o: arithmetic_decode.cpp arithmetic_decode.h arithmetic_coder_cfg.h
+	${CC} -c $<
+
+arithmetic_decode_znz.o: arithmetic_decode_znz.cpp arithmetic_decode.h arithmetic_coder_cfg.h
 	${CC} -c $<
 
 bwt_d.o: $(UTIL_DIR)/bwt_d.cpp $(UTIL_DIR)/bwt_d.h
@@ -31,4 +40,7 @@ bwt_mtf_rle_ari_d_main.o: bwt_mtf_rle_ari_d_main.cpp  arithmetic_decode.h $(UTIL
 	${CC} -c -I $(UTIL_DIR) $<
 
 bwt_ari_decode.exe: bwt_mtf_rle_ari_d_main.o bwt_d.o arithmetic_decode.o
+	${CC} $+ -o $@
+
+bwt_ari_decode_znz.exe: bwt_mtf_rle_ari_d_main.o bwt_d.o arithmetic_decode_znz.o
 	${CC} $+ -o $@
